--- a/home/.config/eww/bar/bar.scss
+++ b/home/.config/eww/bar/bar.scss
@@ -35,7 +35,7 @@ tooltip label {
 
 // ------ Right ------ //
 @import "css/tray.scss";
-@import "css/monitors.scss";
 @import "css/powermenu.scss";
 @import "css/datetime.scss";
 @import "css/network.scss";
+@import "css/power.scss";
