small changes; start of app for settings

--- a/home/.config/eww/eww.scss
+++ b/home/.config/eww/eww.scss
@@ -1,4 +1,7 @@
 @import "colors.scss";
+
+@import "app-launcher/custom.scss";
+
 @import "bar/bar.scss";
 @import "windows/dialogs.scss";
 @import "notify/volume.scss";
