--- a/home/.config/eww/bar/bar.scss
+++ b/home/.config/eww/bar/bar.scss
@@ -5,7 +5,9 @@
 .entire-bar {
   background: transparent;
   background-color: $black-opace;
-  font-family: 'JetBrains Mono Nerd Font';
+  // font-family: "JetBrains Mono Nerd Font";
+  // font-family: "SF Pro Display Bold";
+  font-family: "CaskaydiaCove Nerd Font SemiBold";
   font-size: 20px;
   margin-top: 0px;
   margin-bottom: 0px;
@@ -35,7 +37,6 @@ tooltip label {
 
 // ------ Right ------ //
 @import "css/tray.scss";
-@import "css/monitors.scss";
 @import "css/powermenu.scss";
 @import "css/datetime.scss";
 @import "css/network.scss";
