--- a/home/.config/eww/bar/css/network.scss
+++ b/home/.config/eww/bar/css/network.scss
@@ -2,9 +2,6 @@
     color: $white;
     font-size: 18px;
     margin-right: 15px;
-    // min-width: 100px;
-    // margin-right: 10px;
-    // margin-left: 10px;
 }
 
 .icon-adapter {
@@ -31,5 +28,5 @@
 }
 
 .value.zero {
-    color: $transparent;
+    color: $white;
 }
