--- a/home/.config/eww/bar/css/power.scss
+++ b/home/.config/eww/bar/css/power.scss
@@ -1,11 +1,11 @@
 .power-container {
   font-size: 18px;
-  margin-right: 15px;
+  margin-right: 20px;
 }
 
 .power-icon {
   padding-bottom: 2px;
-  color: $blue;
+  color: $green;
 }
 
 .power-icon.full {
