--- a/home/.config/eww/bar/css/powermenu.scss
+++ b/home/.config/eww/bar/css/powermenu.scss
@@ -34,12 +34,12 @@
 }
 
 .powermenu.button-open {
-  color: $blue;
+  color: $red;
   // border-bottom: solid 2px $transparent;
 }
 
 .powermenu.button-close {
-  color: $blue;
+  color: $red;
   // border-bottom: solid 2px $transparent;
 }
 
