--- a/home/.config/eww/bar/css/updates.scss
+++ b/home/.config/eww/bar/css/updates.scss
@@ -1,45 +1,28 @@
 .container {
-  font-size: 10px;
-  font-weight: bold;
-  padding-top: 1px;
+  padding-top: 2px;
+  padding-left: 8px;
 }
 
-.container.updates {
-  padding-left: 0px;
+.icon {
+  font-size: 18px;
+  color: $blue;
 }
-
 
 .updates {
-  margin-left: -10px;
-}
-
-.updates.installed {
-  padding-top: 7px;
-  margin-left: -10px;
+  font-size: 12px;
+  padding-top: 10px;
+  padding-left: 6px;
+  font-weight: bold;
 }
 
 .updates.done {
-  padding-top: 7px;
   color: $green;
-  font-size: 11px;
-  margin-left: 0px;
 }
 
 .updates.pending {
-  padding-top: 7px;
   color: $yellow;
-  margin-left: -5px;
 }
 
 .updates.pending.high {
-  padding-top: 7px;
   color: $red;
-  margin-left: 0px;
-}
-
-.updates.icon {
-  padding-top: 0px;
-  padding-left: 30px;
-  font-size: 18px;
-  color: $blue;
 }
