--- a/home/.config/eww/eww.scss
+++ b/home/.config/eww/eww.scss
@@ -1,4 +1,9 @@
 @import "colors.scss";
+
 @import "bar/bar.scss";
+
 @import "windows/dialogs.scss";
+@import "windows/settings.scss";
+
 @import "notify/volume.scss";
+@import "notify/brightness.scss";
