adaptation after merge to desktop

--- a/home/.config/eww/bar/css/workspaces.scss
+++ b/home/.config/eww/bar/css/workspaces.scss
@@ -32,7 +32,7 @@
 
 .left {
     // border-left: solid 0.5 $yellow;
-    border-bottom: solid 1.25px $yellow;
+    border-bottom: solid 1.25px $red;
 }
 
 .right {
