--- a/home/.config/eww/bar/css/powermenu.scss
+++ b/home/.config/eww/bar/css/powermenu.scss
@@ -1,50 +1,49 @@
-.powermenu {
+.pw_menu_container {
   padding-left: 10px;
-  padding-right: 10px;
-  margin-left: 2px;
+  padding-right: 15px;
   font-weight: bold;
 }
 
-
-.powermenu.button-shutdown {
+.button {
   color: $red;
-  // border-bottom: solid 2px $blue;
-  border-bottom-left-radius: 2px;
+  font-size: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
-.powermenu.button-restart {
+.button.restart {
   color: $yellow;
-  // border-bottom: solid 2px $blue;
 }
 
-.powermenu.button-suspend {
+.button.suspend {
   color: $green;
-  // border-bottom: solid 2px $blue;
 }
 
-.powermenu.button-logout {
-  color: $white;
-  // border-bottom: solid 2px $blue;
-}
-
-.powermenu.button-lock {
+.button.hibernate {
   color: $blue;
-  // border-bottom: solid 2px $blue;
-  border-bottom-right-radius: 2px;
 }
 
-.powermenu.button-open {
+.button.open {
   color: $red;
-  // border-bottom: solid 2px $transparent;
 }
 
-.powermenu.button-close {
+.button.close {
   color: $red;
-  // border-bottom: solid 2px $transparent;
 }
 
+.confirm_box {
+  // padding-left: 30px;
+  padding-right: 12px;
+}
 
-.powermenu button:hover {
-  // border-bottom: solid 2px $red;
-  border-radius: 3px;
+.button.yes {
+  color: $green;
+  font-size: 16px;
+  padding-left: 15px;
+}
+
+.button.no {
+  color: $yellow;
+  font-size: 16px;
+  padding-left: 15px;
 }
