adjustments from the notebook side

--- a/home/.config/eww/notify/brightness.scss
+++ b/home/.config/eww/notify/brightness.scss
@@ -10,6 +10,6 @@ scale trough {
 }
 
 .brightness-bar trough highlight {
-  background-color: $white;
+  background-color: $blue;
   border-radius: 25px;
 }
