panel dev in eww

--- a/home/.config/eww/bar/css/datetime.scss
+++ b/home/.config/eww/bar/css/datetime.scss
@@ -5,9 +5,9 @@
 }
 
 .calendar {
-  background-color: $black-opace;
-  border: solid 2px $blue;
-  border-radius: 10px;
+  background-color: $black;
+  border: solid 1px $white;
+  border-radius: 5px;
   padding: 5px 5px 5px 5px;
 }
 
