--- a/home/.config/eww/bar/css/network.scss
+++ b/home/.config/eww/bar/css/network.scss
@@ -1,30 +1,29 @@
 .container_network {
-    color: $yellow;
-    font-size: 18px;
-    margin-right: 12px;
+  color: $yellow;
+  font-size: 18px;
+  margin-right: 5px;
 }
 
 .icon-adapter {
-    font-size: 18px;
+  font-size: 18px;
 }
 
 .value {
-    font-weight: bold;
-    font-size: 10px;
+  font-weight: bold;
+  font-size: 10px;
+  margin-right: 5px;
+  min-width: 25px;
 }
 
 .value.up {
-    color: $yellow;
-    padding-bottom: 12px;
-    margin-left: -65px;
+  color: $yellow;
 }
 
+
 .value.down {
-    color: $yellow;
-    padding-top: 10px;
-    margin-right: 3px;
+  color: $yellow;
 }
 
 .value.zero {
-    color: $yellow-opace;
+  color: $yellow-opace;
 }
