--- a/home/.config/eww/bar/css/powermenu.scss
+++ b/home/.config/eww/bar/css/powermenu.scss
@@ -2,6 +2,7 @@
   padding-left: 10px;
   padding-right: 15px;
   font-weight: bold;
+  // min-width: 300px;
 }
 
 .button {
@@ -32,8 +33,9 @@
 }
 
 .confirm_box {
-  // padding-left: 30px;
-  padding-right: 12px;
+  // min-width: 300px;
+  padding-left: 30px;
+  padding-right: 30px;
 }
 
 .button.yes {
