--- a/home/.config/eww/eww.scss
+++ b/home/.config/eww/eww.scss
@@ -1,6 +1,7 @@
 @import "colors.scss";
 
 @import "bar/bar.scss";
+@import "panel/panel.scss";
 
 @import "notify/volume.scss";
 @import "notify/brightness.scss";
