current state with ags; continue work on notebook

--- a/home/.config/eww/bar/css/tray.scss
+++ b/home/.config/eww/bar/css/tray.scss
@@ -1,6 +1,7 @@
 .tray-box {
     border-bottom: solid 2px $transparent;
-    padding-right: 20px;
+    padding-right: 30px;
+    margin-bottom: -5px;
 }
 
 .app.hidden {
