--- a/home/.config/ags/style/bar/client.scss
+++ b/home/.config/ags/style/bar/client.scss
@@ -1,3 +1,15 @@
+.client-box {
+    font-size: 8px;
+}
+
+.client-class {
+    color: $foreground1;
+    font-size: 11px;
+    font-weight: bold;
+}
+
+
 .client-title {
-    color: red;
+    color: $green;
+    font-size: 11px;
 }
