--- a/home/.config/ags/style/common/tooltips.scss
+++ b/home/.config/ags/style/common/tooltips.scss
@@ -4,15 +4,15 @@ tooltip {
     }
 
     background-color: transparent;
-    border: none;
 
     >*>* {
-        background-color: white;
-        border-radius: 4px;
-        border: 2px solid red;
-        color: green;
-        padding: 8px;
-        margin: 4px;
-        box-shadow: 0 0 3px 0 yellow;
+        font-size: 12px;
+        font-weight: bold;
+        background-color: $background1;
+        border-radius: 5px;
+        border: 1.5px solid $foreground3;
+        color: $foreground1;
+        padding: 4px;
+        box-shadow: 0 0 0px 0 $foreground3;
     }
 }
