--- a/home/.config/ags/style/bar/workspaces.scss
+++ b/home/.config/ags/style/bar/workspaces.scss
@@ -1,6 +1,6 @@
 .workspaces button {
     color: rgba(250, 247, 254, 1.0);
-    /* font-size: 16px; */
+    font-size: 18px;
     padding-left: 5px;
     padding-right: 5px;
     margin-left: 2.5px;
