--- a/home/.config/ags/style/common/colors.scss
+++ b/home/.config/ags/style/common/colors.scss
@@ -14,5 +14,7 @@ $red: rgba(255, 103, 103, 1.0);
 $red-opace: rgba(255, 103, 103, 0.5);
 $yellow: rgba(241, 192, 125, 1.0);
 $yellow-opace: rgba(241, 192, 125, 0.5);
-$magenta: rgba(75, 2, 54, 1.0);
-$magenta-opace: rgba(75, 2, 54, 0.5);
+$magenta: rgba(236, 72, 166, 1.0);
+$magenta-opace: rgba(236, 72, 166, 0.5);
+$orange: rgba(255, 159, 67, 1.0);
+$orange-opace: rgba(255, 159, 67, 0.5);
