--- a/home/.config/ags/style/bar/client.scss
+++ b/home/.config/ags/style/bar/client.scss
@@ -1,15 +1,13 @@
-.client-box {
-    font-size: 8px;
-}
+.client-box {}
 
 .client-class {
     color: $foreground1;
-    font-size: 11px;
+    font-size: 12px;
     font-weight: bold;
 }
 
 
 .client-title {
     color: $green;
-    font-size: 11px;
+    font-size: 10px;
 }
