--- a/home/.config/ags/style/common/tooltips.scss
+++ b/home/.config/ags/style/common/tooltips.scss
@@ -6,11 +6,11 @@ tooltip {
     background-color: transparent;
 
     >*>* {
-        font-size: 12px;
+        font-size: 11px;
         font-weight: bold;
         background-color: $background1;
         border-radius: 5px;
-        border: 1.5px solid $foreground3;
+        border: 1.25px solid $green;
         color: $foreground1;
         padding: 4px;
         box-shadow: 0 0 0px 0 $foreground3;
