--- a/home/.config/ags/style/bar/network.scss
+++ b/home/.config/ags/style/bar/network.scss
@@ -16,6 +16,8 @@
     }
 
     .speeds {
+        min-width: 3.75rem;
+
         .value {
             color: $foreground1;
             font-weight: bold;
