--- a/home/.config/ags/style/index.scss
+++ b/home/.config/ags/style/index.scss
@@ -5,17 +5,18 @@
 
 // General
 @import "common/colors.scss";
-@import "common/tooltips.scss";
 @import "common/switch.scss";
+@import "common/tooltips.scss";
 
 // Bar
 @import "bar/index.scss";
 
 // Windows
-@import "windows/bluetooth-manager.scss";
-@import "windows/network-manager.scss";
-@import "windows/calendar.scss";
 @import "windows/audio-manager.scss";
+@import "windows/bluetooth-manager.scss";
+@import "windows/calendar.scss";
+@import "windows/network-manager.scss";
+@import "windows/terminal.scss";
 @import "windows/volume-bar.scss";
 
 // TODO; so aufbauen https://github.com/refact0r/system24/blob/main/theme/system24.theme.css
