--- a/home/.config/ags/style/bar/workspaces.scss
+++ b/home/.config/ags/style/bar/workspaces.scss
@@ -1,22 +1,43 @@
-.workspaces button {
-    color: rgba(250, 247, 254, 1.0);
-    font-size: 18px;
-    padding-left: 5px;
-    padding-right: 5px;
-    margin-left: 2.5px;
-    margin-right: 2.5px;
+.workspace {
+    padding-left: 0.25rem;
+    padding-right: 0.25rem;
     border-bottom: 2px solid transparent;
-    border-radius: 0px;
+
+    >*>* {
+        margin-right: 0.5rem;
+    }
+
+    >*>*:last-child {
+        margin-right: 0rem;
+    }
 }
 
-.workspaces button:hover {
-    border-bottom: 2px solid rgba(97, 255, 202, 0.25);
-    background-color: rgba(0, 0, 0, 0.15);
-}
-
-.workspaces button.focused {
+.active {
     border-bottom: 2px solid rgba(97, 255, 202, 1.0);
-    color: rgb(37, 201, 243);
 }
 
-/* .workspaces button.unfocused {} */
+.workspace-label {
+    color: white;
+    margin-top: -0.5rem;
+    font-size: 14px;
+    font-weight: bold;
+}
+
+.app-icon {
+    // size set in workspaces.ts
+}
+
+.menu {
+    color: red;
+
+}
+
+.workspaces {
+    >* {
+        margin-right: 0.5rem;
+    }
+
+    button:hover {
+        border-bottom: 2px solid rgba(97, 255, 202, 0.25);
+    }
+}
