--- a/home/.config/ags/style/windows/calendar.scss
+++ b/home/.config/ags/style/windows/calendar.scss
@@ -3,7 +3,7 @@
     font-weight: normal;
     color: $foreground2;
     // background: rgba(25, 25, 25, 0.75);
-    border: 1.0px solid $blue;
+    border: 3.0px solid $background2;
     border-radius: 10px;
     background:
         linear-gradient(rgba(25, 25, 25, 0.90),
