--- a/home/.config/ags/style/windows/volume-bar.scss
+++ b/home/.config/ags/style/windows/volume-bar.scss
@@ -4,10 +4,10 @@ window.volume {
         min-width: 1rem;
         padding: 0 0rem;
 
-        border: 5px solid $foreground1;
+        border: 3px solid $background2;
         border-radius: 5rem;
 
-        background: $foreground1;
+        background: $background2;
 
         slider {
             min-height: 0rem;
