small changes before adaptation on notebook

--- a/home/.config/ags/style/bar/index.scss
+++ b/home/.config/ags/style/bar/index.scss
@@ -325,8 +325,9 @@
         }
 
         .data {
-            font-size: 8px;
-            color: $blue;
+            margin-top: -0.25rem;
+            font-size: 10px;
+            color: $foreground3;
         }
     }
 
