--- a/home/.config/ags/style/index.scss
+++ b/home/.config/ags/style/index.scss
@@ -16,6 +16,7 @@
 @import "windows/bluetooth-manager.scss";
 @import "windows/calendar.scss";
 @import "windows/network-manager.scss";
+@import "windows/power-manager.scss";
 @import "windows/volume-bar.scss";
 
 // TODO; so aufbauen https://github.com/refact0r/system24/blob/main/theme/system24.theme.css
