kitty new shortcut; context menu scss; bluetooth sidebar fixes

--- a/home/.config/ags/scss/index.scss
+++ b/home/.config/ags/scss/index.scss
@@ -5,8 +5,7 @@
 
 // General
 @import "colors.scss";
-@import "switch.scss";
-@import "tooltips.scss";
+@import "common.scss";
 
 // Bar
 @import "bar.scss";
