--- a/home/.config/ags/scss/indicator-volume.scss
+++ b/home/.config/ags/scss/indicator-volume.scss
@@ -4,24 +4,19 @@ window.volume {
         min-width: 1rem;
         padding: 0 0rem;
 
-        border: 3px solid $background2;
-        border-radius: 5rem;
+        border: 4.0px solid $background2;
+        // border-radius: 5rem;
 
-        background: $background2;
+        background: $background1;
 
         slider {
             min-height: 0rem;
             min-width: 0rem;
-            margin: 0.75rem;
-            // background-color: $red;
-            // box-shadow: 0 1px 2px 1px rgba(0, 0, 0, 1.0);
-            // border: 2px solid $green;
-            // border-radius: 100%;
-            // border: 0px solid transparent;
+            margin: 0.80rem;
         }
 
         highlight {
-            border-radius: 5rem;
+            // border-radius: 5rem;
             background-color: $red;
         }
 
