--- a/home/.config/ags/scss/bar.scss
+++ b/home/.config/ags/scss/bar.scss
@@ -147,7 +147,7 @@
         .indicator {
             // .wired {}
             // .wifi {}
-            margin-left: 0.3rem;
+            margin-left: -0.1rem;
         }
 
         .speeds>*>* {
@@ -158,17 +158,18 @@
             margin-left: -0.85rem;
             margin-top: 0.2rem;
 
-            min-width: 3.25rem;
+            // min-width: 3.25rem;
 
             .value {
                 color: $foreground1;
                 font-weight: bold;
-                font-size: 12px;
+                font-size: 11px;
             }
 
             .icon {
+                margin-top: 0.1rem;
                 color: $foreground3;
-                font-size: 10px;
+                font-size: 9px;
                 font-weight: bold;
             }
 
