--- a/ags/.config/ags/styles.scss
+++ b/ags/.config/ags/styles.scss
@@ -15,6 +15,7 @@ $--border-radius: 2px;
 
 @import "./windows/bar_top/styles.scss";
 @import "./windows/bar_bottom/styles.scss";
+@import "./windows/shutdown/styles.scss";
 
 * {
     all: unset;
