--- a/ags/.config/ags/windows/shutdown/styles.scss
+++ b/ags/.config/ags/windows/shutdown/styles.scss
@@ -1,110 +1,76 @@
-window.shutdown {
-    background-color: $--color-bg;
+window#shutdown_menu {
+    background-color: rgba($--color-bg, 1);
     box-shadow: none;
     color: $--color-text;
 
-    border-bottom: 1px solid;
+    border-right: 1px solid;
+    border-left: 1px solid;
     border-color: rgba($--color-bg-accent, 1);
+    border-bottom-right-radius: 4px;
+    border-bottom-left-radius: 4px;
 
-    // > * {
-    //     padding-top: $--padding-base;
-    //     padding-bottom: $--padding-base;
-    // }
-    //
-    // // ------ Left and right edge ------
-    // > * > *:first-child {
-    //     margin-left: $--spacing-base * 1.25;
-    // }
-    // > * > *:last-child {
-    //     margin-right: $--spacing-base * 1.25;
-    // }
-    //
-    // // ------ Between widgets ------
-    // > * > * > * {
-    //     margin-right: $--spacing-base;
-    // }
-    // > * > * > *:last-child {
-    //     margin-right: 0rem;
-    // }
+    box.buttons {
+        padding: $--padding-base;
 
-    // > * > * > * > * > * {
-    //     padding: $--padding-base;
-    //     // > * {
-    //     font-size: 20px;
-    //     //     color: red;
-    //     // }
-    //     button {
-    //         color: orange;
-    //     }
-    // }
+        button {
+            padding-left: $--spacing-base;
+            padding-right: $--spacing-base;
 
-    // .shutdownclass.container.label {
-    //     color: green;
-    // }
-    // .shutdownclass {
-    //     margin: 10px;
-    //     color: blue;
-    //     .container {
-    //         margin: 10px;
-    //         color: blue;
-    //         button {
-    //             color: red;
-    //         }
-    //     }
-    //     // color: blue;
-    // }
-    // .shutdownclass.container {
-    //     button.reboot {
-    //         color: blue;
-    //     }
-    // }
+            label {
+                font-size: 26px;
+                color: $--color-text;
+            }
+        }
 
-    // .shutdown.container {
-    //     // button {
-    //     //     color: red;
-    //     //     border: 2px solid blue !important; // Adds a visible border for debugging
-    //     // }
-    //     button.poweroff,
-    //     button.reboot,
-    //     button.suspend,
-    //     button.hibernate {
-    //         color: red !important;
-    //     }
-    // }
+        .selected {
+            border-bottom: 1px solid transparent;
+            border-image: linear-gradient(
+                    45deg,
+                    $--color-primary,
+                    $--color-success
+                )
+                1;
 
-    // .shutdown {
-    //     .container {
-    //         &button {
-    //             .reboot {
-    //                 color: red;
-    //             }
-    //             padding: $--padding-base;
-    //         }
-    //         // &button {
-    //         //     font-size: 30px;
-    //         // }
-    //     }
-    // }
-    // &.button {
-    //     padding: 10px;
-    //     color: red;
-    // }
-    // .shutdown.container.button {
-    //     padding: 10px;
-    // }
-    // .shutdown {
-    //     .container {
-    //         button {
-    //             color: red; // Changes text color to red
-    //             //             background-color: transparent; // Optional: ensures the background is clear if needed
-    //             //             border: none; // Optional: removes borders if necessary
-    //             //             font-size: 1.5rem; // Optional: adjust size for icons
-    //             //             cursor: pointer;
-    //             //
-    //             //             &:hover {
-    //             //                 color: darkred; // Changes color when hovered
-    //             //             }
-    //         }
-    //     }
-    // }
+            animation:
+                borderAnimation 1.5s ease-in-out infinite alternate,
+                transform 2s ease-in-out;
+
+            @keyframes borderAnimation {
+                0% {
+                    border-image: linear-gradient(
+                            45deg,
+                            $--color-primary,
+                            $--color-success
+                        )
+                        1;
+                }
+                100% {
+                    border-image: linear-gradient(
+                            45deg,
+                            $--color-success,
+                            $--color-primary
+                        )
+                        1;
+                }
+            }
+        }
+
+        button:hover {
+            label {
+                color: $--color-success;
+            }
+        }
+    }
+
+    box.uptime {
+        padding-top: $--padding-base;
+
+        .value {
+            color: $--color-primary;
+        }
+
+        .label {
+            color: rgba($--color-text, 0.75);
+        }
+    }
 }
