--- a/ags/.config/ags/styles.scss
+++ b/ags/.config/ags/styles.scss
@@ -24,3 +24,22 @@ $--border-radius: 2px;
     font-family: "Monaspace Krypton SemiBold", sans-serif;
     color: $--color-text;
 }
+
+menu {
+    background-color: $--color-bg-accent;
+    padding: $--padding-base;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    border-color: rgba($--color-bg-accent, 1);
+    color: blue;
+    font-size: $--font-size * 0.75;
+    font-weight: bold;
+
+    > * {
+        padding: 0.075rem;
+    }
+    //
+    // :hover {
+    //     color: $red;
+    // }
+}
