--- a/ags/.config/ags/windows/bars/styles.scss
+++ b/ags/.config/ags/windows/bars/styles.scss
@@ -1,4 +1,7 @@
-window.bar_bottom {
+// -----------------------------------------------------------------------------------------------
+// ------------------------------------------- BOTTOM BAR ----------------------------------------
+// -----------------------------------------------------------------------------------------------
+window.BarBottom {
     box-shadow: none;
     background-color: $--color-bg;
     color: $--color-text;
@@ -49,7 +52,6 @@ window.bar_bottom {
                 &.color-#{$i * 10}-#{$i * 10 + 9} {
                     $percentage: ($i * 10%);
 
-                    // Define color blending logic
                     $color: if(
                         $percentage <= 50%,
                         mix(
@@ -57,12 +59,11 @@ window.bar_bottom {
                             $--color-success,
                             ($percentage * 2%)
                         ),
-                        // Blend from green to yellow (0-50%)
                         mix(
-                                $--color-error,
-                                $--color-warning,
-                                (($percentage - 50%) * 2%)
-                            ) // Blend from yellow to red (51-100%)
+                            $--color-error,
+                            $--color-warning,
+                            (($percentage - 50%) * 2%)
+                        )
                     );
 
                     color: rgba($color, 0.75);
@@ -163,4 +164,98 @@ window.bar_bottom {
     }
 
     // ------ Right side ------
+}
+
+// -----------------------------------------------------------------------------------------------
+// --------------------------------------------- TOP BAR -----------------------------------------
+// -----------------------------------------------------------------------------------------------
+window.TopBar {
+    box-shadow: none;
+    background-color: $--color-bg;
+    color: $--color-text;
+
+    border-bottom: 1px solid;
+    border-color: rgba($--color-bg-accent, 1);
+
+    > * {
+        padding-top: $--padding-base;
+        padding-bottom: $--padding-base;
+    }
+
+    // ------ Left and right edge ------
+    > * > *:first-child {
+        margin-left: $--spacing-base * 1.25;
+    }
+    > * > *:last-child {
+        margin-right: $--spacing-base * 1.25;
+    }
+
+    // ------ Between widgets ------
+    > * > * > * {
+        margin-right: $--spacing-base;
+    }
+    > * > * > *:last-child {
+        margin-right: 0rem;
+    }
+
+    // ------ Left side ------
+
+    // ------ Center side ------
+    .Workspaces {
+        > button {
+            min-width: 16px;
+            padding-left: 0.35rem;
+            padding-right: 0.35rem;
+            transition: all 0.75s cubic-bezier(0.5, 0.25, 0, 1);
+
+            border-bottom: 2px solid transparent;
+        }
+    }
+
+    .Workspaces > button:hover {
+        border-bottom-left-radius: $--border-radius;
+        border-bottom-right-radius: $--border-radius;
+        border-bottom: 0.15rem solid $--color-error;
+    }
+
+    .Workspaces > button.focused {
+        min-width: 16px;
+        border-bottom-left-radius: $--border-radius;
+        border-bottom-right-radius: $--border-radius;
+        border-bottom: 0.15rem solid $--color-primary;
+    }
+
+    // ------ Right side ------
+    .AudioSlider {
+        * {
+            all: unset;
+        }
+
+        margin-right: 0rem;
+
+        icon {
+            margin-right: 0em;
+        }
+
+        trough {
+            min-width: 100px;
+            background-color: color.adjust($--color-primary, $alpha: -0.9);
+            border-radius: $--border-radius * 3;
+            margin-left: 0.5rem;
+        }
+        //
+        highlight {
+            background-color: $--color-primary;
+            min-height: 0.7em;
+            border-radius: $--border-radius * 3;
+        }
+        //
+        slider {
+            background-color: $--color-primary;
+            // border-radius: 2px;
+            // min-height: 1em;
+            // min-width: 1em;
+            // margin: -0.2em;
+        }
+    }
 }
