before implementing subma indicator

--- a/ags/.config/ags/windows/bars/styles.scss
+++ b/ags/.config/ags/windows/bars/styles.scss
@@ -226,6 +226,19 @@ window.TopBar {
     }
 
     // ------ Right side ------
+    .SysTray {
+        // > * > * {
+        //     color: red;
+        //     font-size: 30px;
+        // }
+
+        > button {
+            .icon {
+                font-size: $--font-size * 1.25;
+            }
+        }
+    }
+
     .AudioSlider {
         * {
             all: unset;
